samples/_failures_safe/1761728722_dcead1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f037624.c: In function ‘tokenize’:
./samples/SAFE/__tmp_2f037624.c:180:9: error: expected declaration or statement at end of input
  180 |         tokens[token_count].line = line;
      |         ^~~~~~
./samples/SAFE/__tmp_2f037624.c:180:9: error: expected declaration or statement at end of input
